# misaki-render

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/: scene.xml
assets/bedroom/: scene.xml
assets/bunny/: scene.xml
assets/cbox/: scene.xml
assets/mitsuba/: scene.xml
assets/teapot-full/: scene.xml
assets/test-texture/: scene.xml
ext/: CMakeLists.txt
ext/rgb2spec/: .gitignore  CMakeLists.txt  README.md  rgb2spec.c
include/aspirin/: array.h  aspirin.h  bbox.h  bitmap.h  bsdf.h  bsphere.h  camera.h  class.h  component.h  config.h  diagnostic.h  distribution.h  emitter.h  endpoint.h  film.h  frame.h  fresnel.h  fresolver.h  fwd.h  imageblock.h  imageio.h  integrator.h  interaction.h  logger.h  math.h  math_helper.h  medium.h  mesh.h  microfacet.h  object.h  phase.h  platform.h  plugin.h  properties.h  ray.h  records.h  reflect.h  rfilter.h  sampler.h  scene.h  (+11 more)
include/misaki/: bbox.h  bsdf.h  bsphere.h  class.h  config.h  distribution.h  emitter.h  endpoint.h  film.h  frame.h  fresnel.h  fresolver.h  fwd.h  imageblock.h  imageio.h  integrator.h  interaction.h  logger.h  manager.h  mathutils.h  medium.h  mesh.h  microfacet.h  object.h  phase.h  plugin.h  properties.h  ray.h  records.h  rfilter.h  sampler.h  scene.h  sensor.h  shape.h  spectrum.h  string.h  texture.h  transform.h  utils.h  volume.h  (+2 more)
include/misaki/core/: bitmap.h  frame.h  fwd.h  image.h  imageio.h  logger.h  mathutils.h  platform.h  ray.h  spectrum.h  thread.h  transform.h  warp.h  xml.h
include/misaki/render/: bsdf.h  camera.h  component.h  emitter.h  endpoint.h  film.h  fresnel.h  fwd.h  imageblock.h  imageio.h  integrator.h  interaction.h  logger.h  medium.h  mesh.h  microfacet.h  phase.h  platform.h  properties.h  ray.h  records.h  rfilter.h  sampler.h  scene.h  sensor.h  shape.h  srgb.h  texture.h  volume.h  (+1 more)
old/: CMakeLists.txt
old/src/: CMakeLists.txt
old_src/bsdfs/: conductor.cpp  disney_brdf.cpp  mask.cpp  roughdielectric.cpp
old_src/cameras/: perspective.cpp
old_src/filters/: CMakeLists.txt
old_src/integrators/: CMakeLists.txt
old_src/librender/: interaction.cpp  light.cpp  mesh.cpp  sampler.cpp  texture.cpp
old_src/lights/: point.cpp
old_src/textures/: bitmap.cpp
results/Figure_1_Pathtrace/: scene.xml  teapot.xml
results/Figure_2_RoughConductor/: roughconductor.xml  roughconductor_mts.xml
results/Figure_3_RoughDielectric/: roughdielectric.xml  roughdielectric_mts.xml
results/htmlsource/: bsdfs.html  index.html
results/resources/: common.css  markdeep.min.js  site-menu.css  ui.js
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  main.cpp
src/aspirin/: CMakeLists.txt  main.cpp
src/bsdfs/: CMakeLists.txt  conductor.cpp  dielectric.cpp  diffuse.cpp  disney_brdf.cpp  mask.cpp  roughconductor.cpp  roughplastic.cpp  twosided.cpp
src/cameras/: CMakeLists.txt  perspective.cpp
src/cli/: CMakeLists.txt  main.cpp
src/films/: CMakeLists.txt  rgbfilm.cpp
src/filters/: gaussian.cpp
src/integrators/: CMakeLists.txt  direct.cpp  path.cpp
src/libaspirin/: CMakeLists.txt  bitmap.cpp  bsdf.cpp  camera.cpp  class.cpp  component.cpp  emitter.cpp  endpoint.cpp  film.cpp  fresolver.cpp  imageblock.cpp  imageio.cpp  integrator.cpp  interaction.cpp  light.cpp  logger.cpp  medium.cpp  mesh.cpp  object.cpp  phase.cpp  plugin.cpp  properties.cpp  reflect.cpp  rfilter.cpp  sampler.cpp  scene.cpp  sensor.cpp  shape.cpp  string.cpp  texture.cpp  utils.cpp  volume.cpp  xml.cpp
src/libaspirin/bsdfs/: conductor.cpp  dielectric.cpp  diffuse.cpp  disney_brdf.cpp  mask.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  twosided.cpp
src/libaspirin/cameras/: perspective.cpp
src/libaspirin/emitters/: area.cpp  constant.cpp  envmap.cpp  point.cpp
src/libaspirin/films/: rgbfilm.cpp
src/libaspirin/filters/: gaussian.cpp
src/libaspirin/integrators/: debug.cpp  direct.cpp  path.cpp  photonmapper.cpp  sppm.cpp  volpath.cpp
src/libaspirin/lights/: area.cpp  envmap.cpp  point.cpp
src/libaspirin/media/: homogeneous.cpp
src/libaspirin/phase/: isotropic.cpp
src/libaspirin/samplers/: independent.cpp
src/libaspirin/sensors/: perspective.cpp
src/libaspirin/shapes/: obj.cpp
src/libaspirin/textures/: bitmap.cpp  checkerboard.cpp  srgb.cpp
src/libaspirin/volume/: constant3d.cpp
src/librender/: CMakeLists.txt  bitmap.cpp  bsdf.cpp  camera.cpp  class.cpp  component.cpp  emitter.cpp  endpoint.cpp  film.cpp  fresolver.cpp  image.cpp  imageblock.cpp  imageio.cpp  integrator.cpp  interaction.cpp  logger.cpp  manager.cpp  medium.cpp  mesh.cpp  object.cpp  phase.cpp  plugin.cpp  properties.cpp  records.cpp  reflect.cpp  rfilter.cpp  sampler.cpp  scene.cpp  sensor.cpp  shape.cpp  spectrum.cpp  srgb.cpp  string.cpp  texture.cpp  utils.cpp  volume.cpp  xml.cpp
src/librender/bsdfs/: conductor.cpp  dielectric.cpp  diffuse.cpp  disney_brdf.cpp  mask.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  twosided.cpp
src/librender/emitters/: area.cpp  constant.cpp  envmap.cpp  point.cpp
src/librender/films/: hdrfilm.cpp  rgbfilm.cpp
src/librender/filters/: gaussian.cpp
src/librender/integrators/: aov.cpp  debug.cpp  direct.cpp  nanoflann.hpp  path.cpp  photonmapper.cpp  sppm.cpp  volpath.cpp
src/librender/media/: homogeneous.cpp
src/librender/phase/: isotropic.cpp
src/librender/samplers/: independent.cpp
src/librender/sensors/: perspective.cpp
src/librender/shapes/: obj.cpp
src/librender/spectra/: d65.cpp  regular.cpp  srgb.cpp  srgb_d65.cpp  uniform.cpp
src/librender/textures/: bitmap.cpp  checkerboard.cpp  srgb.cpp
src/librender/ui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_tables.cpp  imgui_widgets.cpp  viewer.cpp
src/librender/volume/: constant3d.cpp
src/lights/: CMakeLists.txt  area.cpp  envmap.cpp  point.cpp
src/nekoba/: CMakeLists.txt  nekoba.cpp
src/samplers/: independent.cpp
src/shapes/: CMakeLists.txt  obj.cpp
src/textures/: CMakeLists.txt  bitmap.cpp  checkerboard.cpp  srgb.cpp
(+36 files in other folders)
